# libr

./: .gitignore  .travis.old  .travis.yml  CMakeLists.txt  README.md  codecov.yml
.github/workflows/: CI.yml  cmake.yml
cmake_modules/: RomiFunctions.cmake  RomiProjectBuildOptions.cmake
include/: r.h
include/r/: JSON.h  clock.h  fs.h  json.h  list.h  log.h  mem.h  membuf.h  net.h  os_wrapper.h  serial.h  thread.h  util.h
libr/: CMakeLists.txt
libr/include/: r.h
libr/include/r/: JSON.h  clock.h  clock_posix.h  fs.h  fs_posix.h  json.h  json_cpp.h  list.h  membuf.h  r_mutex.h  serial.h  serial_posix.h  thread.h  util.h
libr/src/: YAGNI.txt  clock_posix.c  fs_posix.c  json.c  list.c  log.c  mem.c  membuf.c  r_mutex.c  serial_posix.c  util.c
libr/test/: CMakeLists.txt
libr/test/mocks/: CMakeLists.txt  clock_posix.mock.c  clock_posix.mock.h  fcntl.mock.h  json.mock.c  json.mock.h  list.mock.c  log.mock.h  mem.mock.h  membuf.mock.c  membuf.mock.h  memory_wrapper.mock.c  mutex.mock.c  os_wrapper.mock.c  os_wrapper.mock.h  pthread.mock.c  pthread.mock.h  pthread.mutex.mock.h  r_mutex.mock.c  r_mutex.mock.h  system.mock.c  termios.mock.c  termios.mock.h
libr/test/src/: clock_posix_tests.cpp  fs_posix_tests.cpp  json_cpp_tests.cpp  json_tests.cpp  list_tests.cpp  log_tests.cpp  mem_tests.cpp  membuf_tests.cpp  r_mutex_tests.cpp  serial_posix_tests.cpp  thread_pthread_tests.cpp  wrapper_tests_coverage.cpp
libr/test/support/: test_file_utils.cpp  test_file_utils.h
librpp/: CMakeLists.txt
librpp/include/: Clock.h  ClockAccessor.h  FileUtils.h  IClock.h  ILinux.h  ILogWriter.h  ILogger.h  IThreadsafeQueue.h  JsonCpp.h  Linux.h  LogWriter.h  Logger.h  MemBuffer.h  StringUtils.h  ThreadsafeQueue.h  json_cpp.h  membuffer.h  string_utils.h
librpp/src/: Clock.cpp  ClockAccessor.cpp  FileUtils.cpp  IClock.cpp  Linux.cpp  LogWriter.cpp  Logger.cpp  MemBuffer.cpp  StringUtils.cpp  membuffer.cpp  string_utils.cpp
librpp/test/: CMakeLists.txt
librpp/test/mocks/: CMakeLists.txt  Linux-Mock.cpp  mock_clock.h  mock_linux.h  mock_logwriter.h  mock_logwriterfactory.h
librpp/test/src/: Clock_tests.cpp  FileUtils_tests.cpp  Logger_tests.cpp  MemBuffer_tests.cpp  StringUtils_tests.cpp  json_cpp_tests.cpp  membuffer_tests.cpp  string_utils_tests.cpp
src/: YAGNI.txt  clock_posix.c  fs_posix.c  json.c  list.c  log.c  mem.c  membuf.c  net.c  os_wrapper.c  r.c  serial_posix.c  thread_pthread.c  util.c
test/: CMakeLists.txt
test/json_data/: Readme.txt
test/mocks/: CMakeLists.txt  fcntl.mock.c  fcntl.mock.h  list.mock.c  list.mock.h  log.mock.c  log.mock.h  mem.mock.c  mem.mock.h  membuf.mock.c  membuf.mock.h  memory_wrapper.mock.h  mutex.mock.h  os_wrapper.mock.c  os_wrapper.mock.h  osw.mock.c  osw.mock.h  pthread.condition.mock.c  pthread.mock.c  pthread.mock.h  pthread.mutex.mock.c  pthread_condition.mock.c  pthread_condition.mock.h  pthread_mutex.mock.c  pthread_mutex.mock.h  system.mock.c  system.mock.h  thread.mock.c  thread.mock.h
test/src/: clock_posix_tests.cpp  fs_posix_tests.cpp  json_tests.cpp  list_tests.cpp  log_tests.cpp  mem_tests.cpp  membuf_tests.cpp  serial_posix_tests.cpp  tests_main.cpp  thread_pthread_tests.cpp  utils_tests.cpp
test/support/: test_file_utils.cpp
